# PhysicsEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Makefile  README.md  binding.gyp  build.bat  download_gtest.bat  index.js  package-lock.json  package.json  simulation.json  vite.config.js
dist-electron/: main.js
src/: AABB.cpp  AABB.h  CMakeLists.txt  Collision.cpp  Collision.h  Constraints.cpp  Constraints.h  MathUtils.cpp  MathUtils.h  Obb.cpp  Obb.h  RigidBody.cpp  RigidBody.h  Timer.cpp  Timer.h  UniformGridBroadPhase.cpp  UniformGridBroadPhase.h  World.cpp  World.h  aabb.rs  broad_phase.rs  collision.rs  constraints.rs  lib.rs  main.js  main.rs  math_utils.rs  obb.rs  physics.cpp  physics.h  physics.rs  physics_wrapper.cpp  preload.js  rigid_body.rs  timer.rs  world.rs
tests/: CMakeLists.txt  broad_phase.rs  collision.rs  math_utils.rs  rigid_body.rs  test_collision.cpp  test_constraints.cpp  test_mathutils.cpp  test_rigidbody.cpp  test_timer.cpp  test_uniformgrid.cpp  test_world.cpp  timer.rs  world.rs
web/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  server.js  vite.config.js
web/dist-electron/: main.js
