[package]
name = "physics_engine"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A physics engine written in Rust"

[dependencies]
rand = "0.8.5"  # For random number generation
libc = "0.2"    # For FFI if needed later

[lib]
name = "physics_engine"
path = "src/lib.rs" 